-XX:MaxMetaspaceSize=20m -Xshare:dump caused JVM to crash

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 8, 9
    • Component/s: hotspot
    • b48

        $ jdk/8/promoted/latest/binaries/linux-amd64/bin/java -version
        java version "1.8.0"
        Java(TM) SE Runtime Environment (build 1.8.0-b132)
        Java HotSpot(TM) 64-Bit Server VM (build 25.0-b70, mixed mode)


        $ jdk/8/promoted/latest/binaries/linux-amd64/bin/java -XX:MaxMetaspaceSize=20m -Xshare:dump
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007fa8f0a35a71, pid=1698, tid=140363588384512
        #
        # JRE version: (8.0-b132) (build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b70 interpreted mode linux-amd64 compressed oops)
        # Problematic frame:
        # V [libjvm.so+0x820a71] Metachunk::allocate(unsigned long)+0x1
        #
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # An error report file with more information is saved as:
        # /jdk/jdk9/hotspot/make/hs_err_pid1698.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #
        Aborted (core dumped)

              Assignee:
              Calvin Cheung (Inactive)
              Reporter:
              Ioi Lam
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: