8067187: -XX:MaxMetaspaceSize=20m -Xshare:dump caused JVM to crash

Added check for the MaxMetaspaceSize. If it is less than the estimated required size, print an error and exit.

Reviewed-by: jiangli, mseledtsov, stefank